--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "start-dev": "node seed/populate.js"
   },
   "author": "Jordan Ashment",
@@ -15,6 +15,7 @@
     "mongoose": "^5.4.6"
   },
   "devDependencies": {
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "nodemon": "^1.18.10"
   }
 }
