changed a couple things in package.json

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "server-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node index.js",
     "start-dev": "node seed/populate.js"
+  },
+  "engines": {
+    "node": "11.6.0"
   },
   "author": "Jordan Ashment",
   "license": "ISC",
